# oxide

./: Cargo.toml  LICENSE.txt  README.md  output.ppm  scene.toml  test_scene.toml
outputs/: 02_floor.ppm  04_specular.ppm
src/: config.rs  draw.rs  lib.rs  main.rs  mat.rs  mat_test.rs  opts.rs  output.rs  ray.rs  render.rs  vec.rs  vec_test.rs
