[package]
name = "oxide"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "A software raytracer, driven by config files."

[dependencies]
toml = "0.5" # for reading config files
num_cpus = "1.13" # for reading the number of cpus available

[profile.dev]
opt-level = 1 # some optimization is basically required for reasonable runtime behavior

[profile.release]
debug = 1 # want debugger information in release mode for profiling
lto = "thin" # lto but without the compile time hit